src/styles.scss
/* You can add global styles to this file, and also import other style files */

@import "~bootstrap/scss/bootstrap";
@import "~bootflat/bootflat/scss/bootflat";
// Colors
$disabled-color-bg: #fff5f0;
$disabled-color-text: rgb(138, 138, 138);
$lightest-teal: #fff0e8;
$light-teal: #ffdac4;
$teal: #f36f24;
$white: #fff;
$green: #42A948;
$red: #a94442;
* {
    font-family: 'Song Myung', serif;
}

.page-border {
    @extend .offset-md-3;
    @extend .col-md-6;
    margin-bottom: 25px;
}

.page-header {
    text-align: center;
    background-color: $teal;
    @extend .offset-md-0;
    @extend .col-md-12;
    padding-bottom: 10px;
    padding-top: 10px;
    color: white;
}

.page {
    background-color: $white;
    height: 200%;
}

.checkout {
    background-color: $light-teal !important;
    border-radius: 15px;
    padding: 15px;
    margin-top: 15px;
    border: solid $teal;
    border-width: 2px;
    border-style: outset;
    border-image: initial;
}

.form-control {
    background-color: $light-teal !important;
    input,
    select,
    textarea {
        background-color: $lightest-teal !important;
    }
    border: 0 !important;
    .ng-valid[required],
    .ng-valid.required {
        border-left: 5px solid $green !important;
        /* green */
    }
    .ng-invalid:not(form) {
        border-left: 5px solid $red !important;
        /* red */
    }
    .non-required {
        border-left: 5px solid $green !important;
        /* green */
    }
}

.FormRow {
    @extend .row;
    background-color: $light-teal;
}

// Titles
.title-container {
    margin-top: 1.75rem;
    padding-bottom: 35px;
}

.title {
    font-weight: 400;
    font-size: 1.8rem;
    padding-left: 0;
    width: 19rem;
    border-bottom: 4px solid $teal;
}

.total-info {
    @extend .offset-md-6;
    font-weight: 400;
    font-size: x-large;
    margin-bottom: 20px;
    text-align: right;
    span {
        font-weight: 600;
        font-size: 2rem;
        color: $teal;
        margin-left: 20px;
    }
}

// Buttons
.submit-button-container {
    text-align: right;
    margin-right: 50px;
    margin-bottom: 100px;
}

.pay-button {
    margin-top: 30px;
}

.primary-button{
    padding: 9px 16px;
    margin-right: 10px;
    line-height: 1.42857143;
    border-radius: 30px;
    font-size: 1.5rem;
    border-color: $teal;
    width: 200px;
    background-color: $lightest-teal;
    float: right;
    font-weight: bold;
    color: black;
}
.primary-button:disabled,
.primary-button[disabled],
.primary-button[disabled]:hover {
    @extend .primary-button;
    background-color: $disabled-color-bg;
    color: $disabled-color-text;
    border-color: $disabled-color-bg;
}

.primary-button:hover {
    color: $white;
    background-color: $teal;
    border-color: $teal;
}

.DeleteButton {
    border-radius: 50%;
    padding: 0;
    margin-left: -25px;
    top: -7px;
    position: relative;
    z-index: 9999;
    background-color: red;
    color: white;
    width: 17px;
    height: 17px;
    line-height: 5px;
}

.LinkButton {
    @extend .primary-button;
    float: unset;
    vertical-align: middle;
    position: relative;
    font-weight: unset;
    border: solid $teal;
    border-width: 2px;
    border-style: outset;
    border-image: initial;
    font-size: 1.3rem;
    margin-right: unset;
    .LinkButton:hover {
        @extend .primary-button:hover;
    }
}

// Form Control
.FormFieldContainer {
    @extend .form-group;
    @extend .col-md-12;
}

.MediumFormFieldContainer {
    @extend .form-group;
    @extend .col-md-6;
}

.SmallFormFieldContainer {
    @extend .form-group;
    @extend .col-md-4;
}

.ng-valid[required],
.ng-valid.required {
    border-left: 5px solid $green;
    /* green */
}

.ng-invalid:not(form) {
    border-left: 5px solid $red;
    /* red */
}

.non-required {
    border-left: 5px solid $green !important;
    /* green */
}

.icheckbox_flat {
    background-image: url("assets/check_flat/default.png") !important;
}

.checkbox {
    padding-left: 15px;
} //remove the up and down buttons for number fields    
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

//Pagination
.add-entry {
    color: $teal;
}

// .pagination>li:first-child>a{
//     margin-left: 0;
//     border-top-left-radius: 4px;
//     border-bottom-left-radius: 4px;
// }
// .pagination>li:first-child>a:hover, .pagination>li:first-child>a:focus{
//     color: $teal;
//     background-color: $teal;
//     border-color: $teal;
// }
// .pagination>li:last-child>a{
//     margin-right: 0;
//     border-top-right-radius: 4px;
//     border-bottom-right-radius: 4px;
// }
.pagination>.active>.pagination-button,
.pagination>.active>a {
    color: $white;
    background-color: $teal;
    border-color: $teal;
    border-radius: 30px;
}

.pagination>li>.pagination-button,
.pagination>li>a {
    position: relative;
    float: left;
    padding: 9px 16px;
    margin-right: 10px;
    line-height: 1.42857143;
    text-decoration: none;
    border: 1px solid #ddd;
    border-radius: 20px;
    font-size: 16px;
    border-color: $teal;
    max-width: 100%;
    z-index: 0;
}

.pagination>li>.pagination-button:hover,
.pagination>li>.pagination-button:focus,
.pagination>li>a:hover,
.pagination>li>a:focus {
    color: #fff;
    background-color: $teal;
    border-color: $teal;
    cursor: pointer;
}

.nav-buttons {
    display: block;
    text-align: center;
    .nav-button.active {
        color: $white;
        background-color: $teal;
        border: none;
    }
    .nav-button {
        padding: 9px 16px;
        margin-right: 10px;
        line-height: 1.42857143;
        border-radius: 30px;
        font-size: 16px;
        border-color: $teal;
        width: 200px;
        background-color: $lightest-teal;
    }
    .nav-button:hover,
    .nav-button:focus {
        color: $white;
        background-color: $teal;
        border-color: $teal;
    }
    .nav-button-active {
        color: $white;
        background-color: $teal;
        border-color: $teal;
    }
    .next-button {
        float: right;
        margin-bottom: 50px;
    }
    .edit-button {
        margin-bottom: 15px;
    }
}

.review-registers {
    font-size: 1.4rem;
    text-decoration: none;
    b {}
    span {
        float: right;
        margin-left: 20px;
    }
}

#add-entry-box {
    background-color: $lightest-teal;
    border-color: $teal;
    padding: 4px 8px;
}

//Card Formatting
.StripeElement {
    display: block;
    background-color: white;
    padding: 8px 12px;
    border-radius: 4px;
    border: 1px solid transparent;
    box-shadow: 0 1px 3px 0 #212529;
    -webkit-transition: box-shadow 150ms ease;
    transition: box-shadow 150ms ease;
}

.StripeElement--focus {
    box-shadow: 0 1px 3px 0 $teal;
}

.StripeElement--invalid {
    border-color: #fa755a;
}

.StripeElement--webkit-autofill {
    background-color: #fefde5 !important;
}

.CardRow {
    @extend .col-md-12;
}

#card-title {
    text-align: center;
    display: block;
    font-weight: bold;
}

// End of Card formatting 
// Email Styling
.email-info {
    text-align: center;
    display: block;
    font-weight: bold;
    margin-top: 20px;
}

.EmailGroup {
    @extend .col-md-12;
    background-color: $white !important;
    display: inline-flex;
    padding: 5px 12px;
    border-radius: 4px;
    border: 1px solid transparent;
    box-shadow: 0 1px 3px 0 #212529;
    -webkit-transition: box-shadow 150ms ease;
    transition: box-shadow 150ms ease;
    background: transparent;
    width: 105%;
    margin-left: 15px;
}

.EmailGroup:focus {
    box-shadow: 0 1px 3px 0 $teal;
}

.field {
    width: 100%;
    background: transparent;
    font-weight: 300;
    border: 0;
    color: #31325F;
    outline: none;
    padding-right: 10px;
    padding-left: 10px;
    cursor: text;
}

//Thank you page
.h3 {
    padding-top: 200px;
}

.ty-header {
    text-align: center;
    padding-top: 20px;
    font-size: 50px;
}

.ty-info {
    text-align: center;
    padding-top: 20px;
}

.LinkContainer {
    padding-top: 70px;
    padding-bottom: 150px;
    margin-left: 45px;
}

//Review page table 

tr {
    border-bottom: 1pt solid $teal;
}

th, td {
    padding-top: 10px;
    padding-bottom: 10px;
}

